switched npm tasks to use mysql options file

--- a/package.json
+++ b/package.json
@@ -59,11 +59,11 @@
     "db:stop": " ",
     "db:destroy": " ",
     "==MYSQL==": " ",
-    "sql:create": "echo \"CREATE DATABASE IF NOT EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
-    "sql:seed": "mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database < $npm_package_config_sql_seed",
+    "sql:create": "echo \"CREATE DATABASE IF NOT EXISTS $npm_package_config_sql_database\" | mysql --defaults-extra-file=/vagrant/my.cnf",
+    "sql:seed": "mysql --defaults-extra-file=/vagrant/my.cnf $npm_package_config_sql_database < $npm_package_config_sql_seed",
     "sql:reseed": "run-s -l sql:empty sql:seed",
-    "sql:empty": "mysqldump -u$npm_package_config_sql_user -p$npm_package_config_sql_password --add-drop-table --no-data $npm_package_config_sql_database | grep ^DROP | mysql -u$npm_package_config_sql_user -p$npm_package_config_sql_password $npm_package_config_sql_database",
-    "sql:drop": "echo \"DROP DATABASE IF EXISTS $npm_package_config_sql_database\" | mysql -u $npm_package_config_sql_user -p$npm_package_config_sql_password",
+    "sql:empty": "mysqldump --defaults-extra-file=/vagrant/my.cnf --add-drop-table --no-data $npm_package_config_sql_database | grep ^DROP | mysql --defaults-extra-file=/vagrant/my.cnf $npm_package_config_sql_database",
+    "sql:drop": "echo \"DROP DATABASE IF EXISTS $npm_package_config_sql_database\" | mysql --defaults-extra-file=/vagrant/my.cnf",
     "sql:load": "run-s -l sql:create sql:seed",
     "sql:reload": "run-s -l sql:drop sql:load",
     "sql:export": " ",
