renamed mysql log to mysql_general, added mysql_slow tasks

--- a/package.json
+++ b/package.json
@@ -77,12 +77,16 @@
     "log:init:apache_access": "sh scripts/log.sh logs/apache_access.log 'Apache access log'",
     "log:init:apache_errors": "sh scripts/log.sh logs/apache_errors.log 'Apache error log'",
     "log:init:php_errors": "sh scripts/log.sh logs/php_errors.log 'PHP error log'",
-	"log:init:mysql": "sh scripts/log.sh logs/mysql.log 'MySQL general log'",
-    "log:init:all": "run-s -l log:init:apache_access log:init:apache_errors log:init:php_errors log:init:mysql",
+    "log:init:all": "run-s -l log:init:apache_access log:init:apache_errors log:init:php_errors",
+	"log:init:mysql_general": "sh scripts/log.sh logs/mysql_general.log 'MySQL general log'",
+	"log:init:mysql_slow": "sh scripts/log.sh logs/mysql_slow.log 'MySQL slow query log'",
     "==LOGGING==": "",
-    "log:mysql:start": "run-s -l log:init:mysql log:mysql:enable",
-    "log:mysql:enable": "echo \"SET GLOBAL general_log = 'ON'; SET GLOBAL general_log_file = '/vagrant/logs/mysql.log';\" | mysql --defaults-extra-file=/vagrant/my.cnf -D $npm_package_config_sql_database",
-    "log:mysql:stop": "echo \"SET GLOBAL general_log = 'OFF';\" | mysql --defaults-extra-file=/vagrant/my.cnf -D $npm_package_config_sql_database",    
+    "log:mysql_general:start": "run-s -l log:init:mysql log:mysql_general:enable",
+    "log:mysql_general:enable": "echo \"SET GLOBAL general_log = 'ON'; SET GLOBAL general_log_file = '/vagrant/logs/mysql_general.log';\" | mysql --defaults-extra-file=/vagrant/my.cnf -D $npm_package_config_sql_database",
+    "log:mysql_general:stop": "echo \"SET GLOBAL general_log = 'OFF';\" | mysql --defaults-extra-file=/vagrant/my.cnf -D $npm_package_config_sql_database",
+    "log:mysql_slow:start": "run-s -l log:init:mysql log:mysql_slow:enable",
+    "log:mysql_slow:enable": "echo \"SET GLOBAL general_log = 'ON'; SET GLOBAL general_log_file = '/vagrant/logs/mysql_slow.log';\" | mysql --defaults-extra-file=/vagrant/my.cnf -D $npm_package_config_sql_database",
+    "log:mysql_slow:stop": "echo \"SET GLOBAL general_log = 'OFF';\" | mysql --defaults-extra-file=/vagrant/my.cnf -D $npm_package_config_sql_database",        
     "==OTHER==": " ",        
     "cron": "sh scripts/cron.sh",
     "archive": "node scripts/archive.js"
