--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "js:watch": " ",
     "server:watch": " ",
     "==RUNNING==": " ",
-    "start": "node server.js",
+    "start": "sudo nodemon -L server.js",
     "build:start": "run-s -l build start",
     "watch:start": "run-s -l watch start",
     "dev": "run-s -l reload build watch:start",
